--- a/tests/Packages/Install_Arenz_Group_Python.ipynb
+++ b/tests/Packages/Install_Arenz_Group_Python.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-y049vd43\\arenz-group-python_7457cff275f5491988141a480fc4afd7'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-raha6do0\\arenz-group-python_88a9c739696549c19e08854ffa64b5c7'\n"
      ]
     },
     {
@@ -51,8 +51,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-y049vd43\\arenz-group-python_7457cff275f5491988141a480fc4afd7\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 52e80c6f3d43ab09f39e02452f50340f6439c690\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-raha6do0\\arenz-group-python_88a9c739696549c19e08854ffa64b5c7\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit a84952c65026b084f475bf016baf20a0c3c4181a\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
       "Requirement already satisfied: nptdms in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.9.0)\n",
@@ -72,15 +72,15 @@
       "Building wheels for collected packages: arenz_group_python\n",
       "  Building wheel for arenz_group_python (setup.py): started\n",
       "  Building wheel for arenz_group_python (setup.py): finished with status 'done'\n",
-      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.6-py3-none-any.whl size=5663 sha256=ccc54dd2f84b2a099d9d82af497d127e22b5c04c89910fb87721df1a737151a3\n",
-      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-qb2abasx\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
+      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.7-py3-none-any.whl size=5672 sha256=46a96fcdbd3fe10a31819e4e8b2c0b9bbda2ee47430f809952664ed8d9b09eda\n",
+      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-i60_ahmx\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
       "Successfully built arenz_group_python\n",
       "Installing collected packages: arenz_group_python\n",
       "  Attempting uninstall: arenz_group_python\n",
-      "    Found existing installation: Arenz_Group_Python 0.0.4\n",
-      "    Uninstalling Arenz_Group_Python-0.0.4:\n",
-      "      Successfully uninstalled Arenz_Group_Python-0.0.4\n",
-      "Successfully installed arenz_group_python-0.0.6\n"
+      "    Found existing installation: Arenz_Group_Python 0.0.6\n",
+      "    Uninstalling Arenz_Group_Python-0.0.6:\n",
+      "      Successfully uninstalled Arenz_Group_Python-0.0.6\n",
+      "Successfully installed arenz_group_python-0.0.7\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,21 +110,7 @@
      "text": [
       "\n",
       "Please wait a moment while I gather a list of all available modules...\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\_distutils_hack\\__init__.py:26: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "IPython             base64              mmapfile            sysconfig\n",
       "PIL                 bdb                 mmsystem            tabnanny\n",
       "__future__          binascii            modulefinder        tarfile\n",
