--- a/tests/Packages/Install_Arenz_Group_Python.ipynb
+++ b/tests/Packages/Install_Arenz_Group_Python.ipynb
@@ -29,29 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-raha6do0\\arenz-group-python_88a9c739696549c19e08854ffa64b5c7'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-raha6do0\\arenz-group-python_88a9c739696549c19e08854ffa64b5c7\n",
+      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-gjtjyhqq\\arenz-group-python_d5ac79a2fd004ee6bda21719edfdab38\n",
       "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit a84952c65026b084f475bf016baf20a0c3c4181a\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
@@ -68,19 +54,14 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
-      "Building wheels for collected packages: arenz_group_python\n",
-      "  Building wheel for arenz_group_python (setup.py): started\n",
-      "  Building wheel for arenz_group_python (setup.py): finished with status 'done'\n",
-      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.7-py3-none-any.whl size=5672 sha256=46a96fcdbd3fe10a31819e4e8b2c0b9bbda2ee47430f809952664ed8d9b09eda\n",
-      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-i60_ahmx\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
-      "Successfully built arenz_group_python\n",
-      "Installing collected packages: arenz_group_python\n",
-      "  Attempting uninstall: arenz_group_python\n",
-      "    Found existing installation: Arenz_Group_Python 0.0.6\n",
-      "    Uninstalling Arenz_Group_Python-0.0.6:\n",
-      "      Successfully uninstalled Arenz_Group_Python-0.0.6\n",
-      "Successfully installed arenz_group_python-0.0.7\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-gjtjyhqq\\arenz-group-python_d5ac79a2fd004ee6bda21719edfdab38'\n"
      ]
     }
    ],
@@ -227,6 +208,7 @@
     }
    ],
    "source": [
+    "\n",
     "help('modules')"
    ]
   }
