--- a/tests/data/set1/Plot_CVs.ipynb
+++ b/tests/data/set1/Plot_CVs.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "#from scipy.signal import \n",
-    "from arenz_group_python.ec_data import EC_Data\n",
+    "from arenz_group_python.data_treatment import EC_Data\n",
     "from pathlib import Path\n",
     "import sys"
    ]
