--- a/tests/data/set1/Tafel Analysis_CV.ipynb
+++ b/tests/data/set1/Tafel Analysis_CV.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading arenz_group_python\n",
+      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from arenz_group_python import CV_Datas\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,18 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'EC_Data' is not defined",
+     "ename": "TypeError",
+     "evalue": "CV_Data.__init__() got an unexpected keyword argument 'smooth'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m bg_path \u001b[38;5;241m=\u001b[39m path_to_dataSetFolder \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCV_144913_ 3.tdms\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     12\u001b[0m bg_cv \u001b[38;5;241m=\u001b[39m CV_Data()\n\u001b[1;32m---> 13\u001b[0m bg_cv\u001b[38;5;241m.\u001b[39mconv(\u001b[43mEC_Data\u001b[49m(bg_path),y_smooth \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m) \n\u001b[0;32m     14\u001b[0m bg_cv\u001b[38;5;241m.\u001b[39mplot()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'EC_Data' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m paths\u001b[38;5;241m.\u001b[39mappend( path_to_dataSetFolder \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCV_151512_ 3.tdms\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m bg_path \u001b[38;5;241m=\u001b[39m path_to_dataSetFolder \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCV_144913_ 3.tdms\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 12\u001b[0m bg_cv \u001b[38;5;241m=\u001b[39m \u001b[43mCV_Data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbg_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43msmooth\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#bg_cv.conv(EC_Data(bg_path),y_smooth = 4) \u001b[39;00m\n\u001b[0;32m     14\u001b[0m bg_cv\u001b[38;5;241m.\u001b[39mplot()\n",
+      "\u001b[1;31mTypeError\u001b[0m: CV_Data.__init__() got an unexpected keyword argument 'smooth'"
      ]
     }
    ],
@@ -71,8 +80,8 @@
     "paths.append( path_to_dataSetFolder / \"CV_151512_ 3.tdms\")\n",
     "\n",
     "bg_path = path_to_dataSetFolder / \"CV_144913_ 3.tdms\"\n",
-    "bg_cv = CV_Data()\n",
-    "bg_cv.conv(EC_Data(bg_path),y_smooth = 4) \n",
+    "bg_cv = CV_Data(bg_path,smooth = 4)\n",
+    "#bg_cv.conv(EC_Data(bg_path),y_smooth = 4) \n",
     "bg_cv.plot()"
    ]
   },
