--- a/tests/Packages/Install_Arenz_Group_Python.ipynb
+++ b/tests/Packages/Install_Arenz_Group_Python.ipynb
@@ -29,33 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-9p9h4g2j\\arenz-group-python_fab3bebf20dc4b35baceaa459aff0232'\n",
-      "\n",
-      "[notice] A new release of pip is available: 24.1.1 -> 24.1.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-9p9h4g2j\\arenz-group-python_fab3bebf20dc4b35baceaa459aff0232\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 92d2c8ac63b695fcc7c4430cbdbf078a8deb6d78\n",
+      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-ua3pk789\\arenz-group-python_f2aa9f4e9fd540978eeb7bf4f8ee2fc0\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 2ed88ee0698f810f8594ee15fcba654ec85ff65e\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
@@ -75,7 +58,29 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
+      "Building wheels for collected packages: arenz_group_python\n",
+      "  Building wheel for arenz_group_python (pyproject.toml): started\n",
+      "  Building wheel for arenz_group_python (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.11-py3-none-any.whl size=11334 sha256=7a0eabe3d8f66e0ba17526e56fab3580447245fe8d9cec1425fa77caf58d1a5b\n",
+      "  Stored in directory: C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-1bu4a5y5\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
+      "Successfully built arenz_group_python\n",
+      "Installing collected packages: arenz_group_python\n",
+      "  Attempting uninstall: arenz_group_python\n",
+      "    Found existing installation: Arenz_Group_Python 0.0.10\n",
+      "    Uninstalling Arenz_Group_Python-0.0.10:\n",
+      "      Successfully uninstalled Arenz_Group_Python-0.0.10\n",
+      "Successfully installed arenz_group_python-0.0.11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-ua3pk789\\arenz-group-python_f2aa9f4e9fd540978eeb7bf4f8ee2fc0'\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.1.1 -> 24.1.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -96,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +111,23 @@
       "\n",
       "Please wait a moment while I gather a list of all available modules...\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_sqlite3: testing with version '2.6.0', sqlite_version '3.42.0'\n",
+      "loading arenz_group_python\n",
+      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\.venv\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
      ]
     },
     {
