--- a/tests/Packages/Install_Arenz_Group_Python.ipynb
+++ b/tests/Packages/Install_Arenz_Group_Python.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,55 +29,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-ua3pk789\\arenz-group-python_f2aa9f4e9fd540978eeb7bf4f8ee2fc0\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 2ed88ee0698f810f8594ee15fcba654ec85ff65e\n",
+      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python (to revision release) to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-drf3uob5\\arenz-group-python_d3d1cbffbfbd4b88b987b9c556ac9b4f\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 34b1e8cd5390ef66f929453436dd35c2d43975b7\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
       "  Getting requirements to build wheel: finished with status 'done'\n",
       "  Preparing metadata (pyproject.toml): started\n",
       "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-      "Requirement already satisfied: nptdms in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.9.0)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.9.1)\n",
-      "Requirement already satisfied: pathlib in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.0.1)\n",
-      "Requirement already satisfied: scipy in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.14.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.2.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (4.53.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.4.5)\n",
-      "Requirement already satisfied: numpy>=1.23 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.0.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
-      "Building wheels for collected packages: arenz_group_python\n",
-      "  Building wheel for arenz_group_python (pyproject.toml): started\n",
-      "  Building wheel for arenz_group_python (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.11-py3-none-any.whl size=11334 sha256=7a0eabe3d8f66e0ba17526e56fab3580447245fe8d9cec1425fa77caf58d1a5b\n",
-      "  Stored in directory: C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-1bu4a5y5\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
-      "Successfully built arenz_group_python\n",
-      "Installing collected packages: arenz_group_python\n",
-      "  Attempting uninstall: arenz_group_python\n",
-      "    Found existing installation: Arenz_Group_Python 0.0.10\n",
-      "    Uninstalling Arenz_Group_Python-0.0.10:\n",
-      "      Successfully uninstalled Arenz_Group_Python-0.0.10\n",
-      "Successfully installed arenz_group_python-0.0.11\n"
+      "Requirement already satisfied: nptdms in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (1.9.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (3.9.1)\n",
+      "Requirement already satisfied: pathlib in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (1.0.1)\n",
+      "Requirement already satisfied: scipy in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (1.14.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (4.53.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (1.4.5)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (2.0.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (24.1)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python@release) (1.16.0)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-ua3pk789\\arenz-group-python_f2aa9f4e9fd540978eeb7bf4f8ee2fc0'\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-drf3uob5\\arenz-group-python_d3d1cbffbfbd4b88b987b9c556ac9b4f'\n",
+      "  Running command git checkout -b release --track origin/release\n",
+      "  branch 'release' set up to track 'origin/release'.\n",
+      "  Switched to a new branch 'release'\n",
       "\n",
       "[notice] A new release of pip is available: 24.1.1 -> 24.1.2\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
@@ -87,7 +78,7 @@
    "source": [
     "#works for most venv.\n",
     "\n",
-    "!{path_to_executable} -m pip install arenz_group_python@git+https://github.com/Guswib/Arenz_Group_Python"
+    "!{path_to_executable} -m pip install arenz_group_python@git+https://github.com/Guswib/Arenz_Group_Python@release"
    ]
   },
   {
@@ -101,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,30 +101,7 @@
      "text": [
       "\n",
       "Please wait a moment while I gather a list of all available modules...\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_sqlite3: testing with version '2.6.0', sqlite_version '3.42.0'\n",
-      "loading arenz_group_python\n",
-      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\.venv\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "IPython             atexit              mimetypes           subprocess\n",
       "PIL                 audioop             mmap                sunau\n",
       "__future__          base64              mmapfile            symtable\n",
