--- a/tests/data/set1/Tafel Analysis_CV.ipynb
+++ b/tests/data/set1/Tafel Analysis_CV.ipynb
@@ -10,13 +10,7 @@
      "output_type": "stream",
      "text": [
       "loading arenz_group_python\n",
-      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n",
       "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
      ]
     }
@@ -63,23 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "convert {'y_smooth': 10}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<Axes: xlabel='E(V)', ylabel='i(A)'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -116,15 +103,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "convert {'y_smooth': 0}\n",
-      "convert {'y_smooth': 0}\n",
-      "convert {'y_smooth': 0}\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
