--- a/tests/Packages/Project_Create_Structure.ipynb
+++ b/tests/Packages/Project_Create_Structure.ipynb
@@ -25,8 +25,7 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "import os\n",
+    "from arenz_group_python import Project_Paths\n",
     "\n",
     "#Path of the file.\n",
     "\n",
