--- a/tests/Project_Setup/Project_Create_Structure.ipynb
+++ b/tests/Project_Setup/Project_Create_Structure.ipynb
@@ -13,18 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Project_Paths' from 'arenz_group_python' (c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.venv\\Lib\\site-packages\\arenz_group_python\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01marenz_group_python\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Project_Paths\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#Path of the file.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m main_dir \u001b[38;5;241m=\u001b[39m Project_Paths\u001b[38;5;241m.\u001b[39mcwd\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Project_Paths' from 'arenz_group_python' (c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.venv\\Lib\\site-packages\\arenz_group_python\\__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\tests\\Project_Setup\n"
      ]
     }
    ],
@@ -33,18 +29,34 @@
     "\n",
     "#Path of the file.\n",
     "\n",
-    "main_dir = Project_Paths.cwd\n",
-    "print(main_dir)"
+    "main_dir = Project_Paths().cwd\n",
+    "print(str(main_dir))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "creating files:\n",
+      "\n",
+      "+\"notebooks_models/modelData.ipynb\" was created\n",
+      "+\"py_scripts/my_Module.py\" was created\n",
+      "+\"__init__.py\" was created\n",
+      "+\"README.md\" was created\n",
+      "+\"README.md\" was created\n",
+      "+\"extracted_values.csv\" was created\n"
+     ]
+    }
+   ],
    "source": [
     "#Creates the folder structre\n",
-    "Project_Paths().create_project_structure()"
+    "Project_Paths().create_project_structure(main_dir)"
    ]
   }
  ],
