--- a/tests/Project_Setup/Install_Arenz_Group_Python.ipynb
+++ b/tests/Project_Setup/Install_Arenz_Group_Python.ipynb
@@ -37,8 +37,8 @@
      "output_type": "stream",
      "text": [
       "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-vm574qzd\\arenz-group-python_f528de77f2b04041b04122e73e2d747f\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit b72994408b8cc8f72ab26e92ca8c9c49b4d27652\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-jikfe8s9\\arenz-group-python_b5572e4dd6444369b37824459196a758\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 5fb70ce7337862c0fcd3ee5d1535015739bf5a91\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
@@ -58,14 +58,26 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
+      "Building wheels for collected packages: arenz_group_python\n",
+      "  Building wheel for arenz_group_python (pyproject.toml): started\n",
+      "  Building wheel for arenz_group_python (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.13-py3-none-any.whl size=14712 sha256=b7334b3f4e484fdf05d36100ada98f62d4b95de804a77fdde58dbdadbe2db756\n",
+      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-bz8ppaxk\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
+      "Successfully built arenz_group_python\n",
+      "Installing collected packages: arenz_group_python\n",
+      "  Attempting uninstall: arenz_group_python\n",
+      "    Found existing installation: Arenz_Group_Python 0.0.12\n",
+      "    Uninstalling Arenz_Group_Python-0.0.12:\n",
+      "      Successfully uninstalled Arenz_Group_Python-0.0.12\n",
+      "Successfully installed arenz_group_python-0.0.13\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-vm574qzd\\arenz-group-python_f528de77f2b04041b04122e73e2d747f'\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-jikfe8s9\\arenz-group-python_b5572e4dd6444369b37824459196a758'\n",
       "\n",
       "[notice] A new release of pip is available: 24.1.1 -> 24.1.2\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
