--- a/tests/Project_Setup/Project_Create_Structure.ipynb
+++ b/tests/Project_Setup/Project_Create_Structure.ipynb
@@ -13,13 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loading arenz_group_python\n",
+      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n",
       "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\tests\\Project_Setup\n"
      ]
     }
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,8 +50,9 @@
       "+\"notebooks_models/modelData.ipynb\" was created\n",
       "+\"py_scripts/my_Module.py\" was created\n",
       "+\"__init__.py\" was created\n",
-      "+\"README.md\" was created\n",
-      "+\"README.md\" was created\n",
+      "+\"extractData.ipynb\" was created\n",
+      "+\"README.txt\" was created\n",
+      "+\"README.txt\" was created\n",
       "+\"extracted_values.csv\" was created\n"
      ]
     }
