--- a/tests/Project_Setup/notebooks_exploration_cleaning/extractData.ipynb
+++ b/tests/Project_Setup/notebooks_exploration_cleaning/extractData.ipynb
@@ -19,44 +19,29 @@
             "cell_type": "code",
             "execution_count": 1,
             "metadata": {},
-            "outputs": [],
-            "source": [
-                "from pathlib import Path\n",
-                " \n",
-                "# importing sys\n",
-                "import sys\n",
-                "nb_path = Path.cwd()\n",
-                "pack_path = Path()\n",
-                "for x in nb_path.parents:\n",
-                "    a= x / 'src'\n",
-                "    \n",
-                "    if a.is_dir():\n",
-                "        pack_path = a\n",
-                "        break\n",
-                "    \n",
-                "sys.path.insert(0,str(pack_path))  "
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
-            "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
                         "loading arenz_group_python\n",
-                        "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n"
+                        "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
                     ]
                 }
             ],
             "source": [
                 "#from arenz_group_python import EC_Data\n",
                 "from arenz_group_python import Project_Paths\n",
-                "from arenz_group_python import save_key_values\n",
                 "#from arenz_group_python import CV_Data\n",
-                "\n",
+                "from arenz_group_python import save_key_values"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "#if there is a file in the rawdata folder:\n",
                 "#PATH_TO_FILE = Project_Paths().rawdata_path / 'FILE_NAME' \n",
                 "#file1 = EC_Data('PATH_TO_FILE')\n",
@@ -65,20 +50,33 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "sample name found -  updating row\n",
-                        "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\tests\\Packages\\notebooks_exploration_cleaning\\extra\\data\\extracted_values.csv\n"
+                        "sample not found -  adding row\n"
                     ]
+                },
+                {
+                    "data": {
+                        "text/plain": [
+                            "True"
+                        ]
+                    },
+                    "execution_count": 5,
+                    "metadata": {},
+                    "output_type": "execute_result"
                 }
             ],
             "source": [
-                "save_key_values(\"extracted_values.csv\",\"sample 7\", [4,2,5,4,5])"
+                "from arenz_group_python.data_treatment.key_values_to_file import save_key_values\n",
+                "\n",
+                "\n",
+                "PATH_TO_EXTRACTED_DATA_FILE = Project_Paths().data_path / 'extracted_values.csv' \n",
+                "save_key_values(PATH_TO_EXTRACTED_DATA_FILE, 'Sample1', [12.0, 4343, 5454.32])"
             ]
         }
     ],
