--- a/tests/Project_Setup/Install_Arenz_Group_Python.ipynb
+++ b/tests/Project_Setup/Install_Arenz_Group_Python.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-vpfo269p\\arenz-group-python_ee1c860d1a424b119c67a360f4493a7d'\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-fzi6o4mg\\arenz-group-python_6afcca78a24e44eb9cb5c7cb85f52a6e'\n",
       "\n",
       "[notice] A new release of pip is available: 24.1.1 -> 24.1.2\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
@@ -54,8 +54,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-vpfo269p\\arenz-group-python_ee1c860d1a424b119c67a360f4493a7d\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit b02b13f82b610f9f398bc91b5ed922529dbd89c3\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-fzi6o4mg\\arenz-group-python_6afcca78a24e44eb9cb5c7cb85f52a6e\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 41b1e34bf66486d4db2859ff7632532eab65ef00\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
@@ -75,7 +75,19 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
+      "Building wheels for collected packages: arenz_group_python\n",
+      "  Building wheel for arenz_group_python (pyproject.toml): started\n",
+      "  Building wheel for arenz_group_python (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.14-py3-none-any.whl size=15191 sha256=782fe46b14df8937b429cb9b79b6b62194d4aa3d5c234d94a6a79ba6341d60e3\n",
+      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-69icljsl\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
+      "Successfully built arenz_group_python\n",
+      "Installing collected packages: arenz_group_python\n",
+      "  Attempting uninstall: arenz_group_python\n",
+      "    Found existing installation: Arenz_Group_Python 0.0.13\n",
+      "    Uninstalling Arenz_Group_Python-0.0.13:\n",
+      "      Successfully uninstalled Arenz_Group_Python-0.0.13\n",
+      "Successfully installed arenz_group_python-0.0.14\n"
      ]
     }
    ],
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +118,23 @@
       "\n",
       "Please wait a moment while I gather a list of all available modules...\n",
       "\n",
+      "test_sqlite3: testing with version '2.6.0', sqlite_version '3.42.0'\n",
+      "loading arenz_group_python\n",
+      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.venv\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "IPython             asyncore            matplotlib          subprocess\n",
       "PIL                 atexit              matplotlib_inline   sunau\n",
       "__future__          audioop             mimetypes           symtable\n",
