--- a/tests/Project_Setup/Project_Create_Structure.ipynb
+++ b/tests/Project_Setup/Project_Create_Structure.ipynb
@@ -13,13 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loading arenz_group_python\n",
+      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python']\n",
       "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\tests\\Project_Setup\n"
      ]
     }
@@ -35,28 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-\"rawdata\" exists already as a folder\n",
-      "-\"data\" exists already as a folder\n",
-      "-\"py_scripts\" exists already as a folder\n",
-      "-\"notebooks_models\" exists already as a folder\n",
-      "-\"notebooks_exploration_cleaning\" exists already as a folder\n",
       "\n",
       "creating files:\n",
       "\n",
-      "-\"notebooks_models/modelData.ipynb\" already exists\n",
-      "-\"py_scripts/my_Module.py\" already exists\n",
-      "-\"__init__.py\" already exists\n",
+      "+\"notebooks_models/modelData.ipynb\" was created\n",
+      "+\"py_scripts/my_Module.py\" was created\n",
+      "+\"__init__.py\" was created\n",
       "+\"extractData.ipynb\" was created\n",
-      "-\"README.txt\" already exists\n",
-      "-\"README.txt\" already exists\n",
-      "-\"extracted_values.csv\" already exists\n"
+      "+\"README.txt\" was created\n",
+      "+\"README.txt\" was created\n",
+      "+\"extracted_values.csv\" was created\n"
      ]
     }
    ],
